@@ -5,38 +5,4 @@ insect with computer vision as well as a number of tools that are necessary
 for the project to compile.
 
 
-Download CMake
-Generate new makefile with cmake and correct path
-Make program
-
-Download OpenCV 2.4.11 for linux and extract
-Follow instructions on opencv website
-
-Download flycapture (https://www.ptgrey.com/KB/10548)
-Follow instructions
-Change buffer size
-
-UART Example 
-Download https://github.com/mavlink/c_uart_interface_example
-make; ./mavlink_control -d /dev/ttyACM0
-
-Init MAVLINK submodule
-while inside fyp git repo:
-git submodule update --init --recursive
-
-To remote control to NUC
-Putty and XMing
-Launch XMing and XMing Launch
-Use 10.42.0.1 for and max sure to enable xforwarding under ssh. Use localhost:0
-
-Download QGroundControl
-sudo add-apt-repository ppa:beineri/opt-qt542-trusty
-sudo add-apt-repository ppa:qgroundcontrol/ppa
-sudo apt-get update
-sudo apt-get install qgroundcontrol
-
-Get simulator
-https://pixhawk.org/dev/hil/jmavsim to install
-
-java -Djava.ext.dirs= -cp lib/*:out/production/jmavsim.jar me.drton.jmavsim.Simulator -serial /dev/ttyACM0 57600 -qgc to run
-
+Read "Installation Instructions" for all of the steps to get the program up and running.
